Fixed align of Delete buttons for Disks Bug: When some disk is bootable, arrangment is broke. Fixes: https://github.com/oVirt/ovirt-web-ui/issues/544

--- a/src/components/VmDisks/style.css
+++ b/src/components/VmDisks/style.css
@@ -8,6 +8,7 @@
     list-style-type: none;
     padding: 0;
     margin-bottom: 0px !important;
+    display: table;
 }
 
 .smaller {
@@ -26,4 +27,15 @@
     text-decoration: none;
     font-size: small;
     cursor: pointer;
+}
+
+.vmdisk-item {
+    display: block;
+}
+
+.vmdisk-item span.vmdisk-item-info {
+    margin-right: 5px;
+}
+.vmdisk-item span.vmdisk-item-delete {
+    float: right;
 }
